Final Ones_Organised - Resubmission/Istio/istio-logging.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: access-logging
  namespace: istio-system
spec:
  mtls:
    mode: STRICT
