Final Ones_Organised - Resubmission/Istio/db-mtls.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: db-mtls
  namespace: jenkins
spec:
  host: my-app-db-service.jenkins.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
