Final Ones_Organised - Resubmission/Istio/app-to-backend-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: app-to-backend-policy
  namespace: jenkins
spec:
  selector:
    matchLabels:
      app: my-app-backend
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["spiffe://cluster.local/ns/jenkins/sa/jenkins-sa"]  # The application service account
