Final Ones_Organised - Resubmission/Istio/app-to-db-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: deny-my-app-v3-to-db
  namespace: jenkins
spec:
  selector:
    matchLabels:
      app: my-app-db  # Target the database
  action: DENY
  rules:
  - from:
    - source:
        principals:
        - spiffe://cluster.local/ns/jenkins/sa/jenkins-sa  # SPIFFE ID of my-app-v3 service account
