Final Ones_Organised - Resubmission/Istio/backend-to-db-policy-v3.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: backend-to-db-policy-v3
  namespace: jenkins  # namespace
spec:
  selector:
    matchLabels:
      app: my-app-db  # database service
  action: DENY  # Default action is to deny
  rules:
  # Allow access from specific service accounts
  - from:
    - source:
        principals:
        - spiffe://cluster.local/ns/jenkins/sa/backend-sa  
    to:
    - operation:
        ports: ["3306"]  # SQL
  # Deny all other access
  - from:
    - source:
        principals: ["*"]  # Deny all other principals
